Revamp registration form with new validations and country field
Updated password requirements and validation logic, added country selection, improved anti-bot and throttling mechanisms, and revised i18n translations for registration. The registration form now enforces stricter password checks, includes a country dropdown, and provides better feedback for suspicious activity and submission throttling.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -55,29 +55,46 @@
   "register_strength_good": "Good",
   "register_strength_strong": "Strong",
   "register_strength_excellent": "Excellent",
-  "register_requirement_length": "At least 12 characters",
-  "register_requirement_upper": "One uppercase letter",
-  "register_requirement_lower": "One lowercase letter",
-  "register_requirement_number": "One number",
-  "register_requirement_symbol": "One special symbol",
-  "register_requirement_spaces": "No spaces",
-  "register_requirement_email": "Does not contain email",
-  "register_requirement_repeats": "No repeated characters",
+  "register_requirement_length": "At least 8 characters",
+  "register_requirement_letter": "At least one letter",
+  "register_requirement_number": "At least one number",
+  "register_requirement_symbol": "At least one special symbol",
+  "register_requirement_spaces": "No whitespace characters",
   "register_password_mismatch": "Passwords must match.",
-  "register_policy_title": "I accept the security policy",
-  "register_policy_text": "Registration requires adherence to the Acceptable Use Policy and multi-factor authentication on first login.",
-  "register_security_hint": "Your password will be hashed client-side before transmission to the identity provider.",
+  "register_policy_title": "I agree with the Privacy Policy",
+  "register_policy_text": "Creating an account confirms you accept the Privacy Policy and consent to Argus Portal processing your data.",
+  "register_policy_required": "Accept the Privacy Policy to continue.",
+  "register_security_hint": "Registration is protected by Keycloak and layered anti-bot checks.",
   "register_cta": "Create account",
   "register_submitting": "Creating account...",
   "register_fix_errors": "Resolve the highlighted issues before continuing.",
   "register_success": "Request submitted. Check your inbox to verify the account.",
   "register_generic_error": "Registration failed. Try again or contact an administrator.",
+  "register_password_rejected": "Keycloak rejected the password. Choose a stronger password.",
+  "register_email_exists": "Email already registered.",
   "register_nav": "Register",
   "register_recaptcha_ready": "reCAPTCHA v3 protection is active.",
   "register_recaptcha_loading": "Initialising reCAPTCHA...",
   "register_recaptcha_failed": "Unable to verify reCAPTCHA. Try again in a few seconds.",
   "register_recaptcha_unavailable": "reCAPTCHA is still loading. Refresh the page if the issue persists.",
   "register_recaptcha_disabled": "reCAPTCHA is not configured. Set VITE_RECAPTCHA_SITE_KEY to enable registration.",
+  "register_recaptcha_score": "Score {{value}}",
+  "register_recaptcha_low_score": "Suspicious behaviour detected. Submission blocked.",
+  "register_keycloak_unavailable": "Keycloak configuration missing. Contact an administrator.",
+  "register_country": "Country",
+  "register_country_placeholder": "Select country",
+  "register_country_ua": "UA — Ukraine",
+  "register_country_pl": "PL — Poland",
+  "register_country_de": "DE — Germany",
+  "register_country_us": "US — United States",
+  "register_country_gb": "GB — United Kingdom",
+  "register_country_required": "Select your country.",
+  "register_full_name_required": "Enter your full name.",
+  "register_time_gate_active": "Please wait before submitting the form.",
+  "register_time_gate_pending": "Submit unlocks shortly…",
+  "register_throttle_active": "Please wait {{seconds}}s before retrying.",
+  "register_throttle_hint": "Retry available in {{seconds}}s",
+  "register_suspicious_activity": "Suspicious activity detected.",
   "dashboard_pending_data": "Awaiting live data…",
   "dashboard_sensor_total": "{{count}} sensors",
   "dashboard_loading_map": "Loading map…",
