--- a/src/i18n/uk.json
+++ b/src/i18n/uk.json
@@ -55,29 +55,46 @@
   "register_strength_good": "Добрий",
   "register_strength_strong": "Надійний",
   "register_strength_excellent": "Відмінний",
-  "register_requirement_length": "Щонайменше 12 символів",
-  "register_requirement_upper": "Одна велика літера",
-  "register_requirement_lower": "Одна мала літера",
-  "register_requirement_number": "Одна цифра",
-  "register_requirement_symbol": "Один спецсимвол",
-  "register_requirement_spaces": "Без пробілів",
-  "register_requirement_email": "Не містить email",
-  "register_requirement_repeats": "Без повторюваних символів",
+  "register_requirement_length": "Щонайменше 8 символів",
+  "register_requirement_letter": "Принаймні одна літера",
+  "register_requirement_number": "Принаймні одна цифра",
+  "register_requirement_symbol": "Принаймні один спецсимвол",
+  "register_requirement_spaces": "Без пробільних символів",
   "register_password_mismatch": "Паролі повинні збігатися.",
-  "register_policy_title": "Погоджуюся з політикою безпеки",
-  "register_policy_text": "Реєстрація передбачає дотримання політики використання та ввімкнення MFA при першому вході.",
-  "register_security_hint": "Перед надсиланням пароль буде захешовано на клієнті.",
+  "register_policy_title": "Погоджуюсь із Політикою конфіденційності",
+  "register_policy_text": "Створюючи обліковий запис, ви підтверджуєте ознайомлення з Політикою конфіденційності та надаєте згоду на обробку даних Argus Portal.",
+  "register_policy_required": "Підтвердьте Політику конфіденційності.",
+  "register_security_hint": "Реєстрація захищена Keycloak та антибот-логікою.",
   "register_cta": "Створити обліковий запис",
   "register_submitting": "Створення облікового запису...",
   "register_fix_errors": "Усуньте помилки у формі перед продовженням.",
   "register_success": "Запит відправлено. Перевірте пошту для підтвердження.",
   "register_generic_error": "Помилка під час реєстрації. Спробуйте ще раз або зверніться до адміністратора.",
+  "register_password_rejected": "Keycloak відхилив пароль. Оберіть надійніший.",
+  "register_email_exists": "Email вже зареєстрований.",
   "register_nav": "Реєстрація",
   "register_recaptcha_ready": "reCAPTCHA v3 активна.",
   "register_recaptcha_loading": "Ініціалізація reCAPTCHA...",
   "register_recaptcha_failed": "Не вдалося підтвердити reCAPTCHA. Спробуйте знову пізніше.",
   "register_recaptcha_unavailable": "reCAPTCHA ще завантажується. Оновіть сторінку, якщо проблема не зникла.",
   "register_recaptcha_disabled": "reCAPTCHA не налаштована. Вкажіть VITE_RECAPTCHA_SITE_KEY, щоб увімкнути реєстрацію.",
+  "register_recaptcha_score": "Оцінка {{value}}",
+  "register_recaptcha_low_score": "Виявлено підозрілу активність. Надсилання заблоковано.",
+  "register_keycloak_unavailable": "Конфігурацію Keycloak не знайдено. Зверніться до адміністратора.",
+  "register_country": "Країна",
+  "register_country_placeholder": "Оберіть країну",
+  "register_country_ua": "UA — Україна",
+  "register_country_pl": "PL — Польща",
+  "register_country_de": "DE — Німеччина",
+  "register_country_us": "US — США",
+  "register_country_gb": "GB — Велика Британія",
+  "register_country_required": "Оберіть країну проживання.",
+  "register_full_name_required": "Вкажіть повне ім'я.",
+  "register_time_gate_active": "Почекайте перед надсиланням форми.",
+  "register_time_gate_pending": "Надсилання стане доступним за мить…",
+  "register_throttle_active": "Зачекайте {{seconds}} с перед повторною спробою.",
+  "register_throttle_hint": "Повторна спроба через {{seconds}} с",
+  "register_suspicious_activity": "Виявлено підозрілу активність.",
   "dashboard_pending_data": "Очікуємо живі дані…",
   "dashboard_sensor_total": "{{count}} датчиків",
   "dashboard_loading_map": "Завантаження карти…",
