Add Rust backend with Keycloak integration
Introduces a Rust backend in the 'backend' directory, including Cargo.toml, source files for handlers, models, routes, and Keycloak integration. Updates Makefile to support backend commands and unified startup, improves Keycloak environment and CORS configuration, and updates documentation for social identity providers and Cloudflare Turnstile. Minor updates to .gitignore and frontend files to support new backend and environment variables.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -73,14 +73,21 @@
   "register_password_rejected": "Keycloak rejected the password. Choose a stronger password.",
   "register_email_exists": "Email already registered.",
   "register_nav": "Register",
-  "register_recaptcha_ready": "reCAPTCHA v3 protection is active.",
-  "register_recaptcha_loading": "Initialising reCAPTCHA...",
-  "register_recaptcha_failed": "Unable to verify reCAPTCHA. Try again in a few seconds.",
-  "register_recaptcha_unavailable": "reCAPTCHA is still loading. Refresh the page if the issue persists.",
-  "register_recaptcha_disabled": "reCAPTCHA is not configured. Set VITE_RECAPTCHA_SITE_KEY to enable registration.",
-  "register_recaptcha_score": "Score {{value}}",
-  "register_recaptcha_low_score": "Suspicious behaviour detected. Submission blocked.",
+  "register_turnstile_ready": "Cloudflare Turnstile protection is active.",
+  "register_turnstile_loading": "Initialising Turnstile...",
+  "register_turnstile_failed": "Verification failed. Try again shortly.",
+  "register_turnstile_unavailable": "Turnstile is still loading. Refresh the page if the issue persists.",
+  "register_turnstile_disabled": "Turnstile is not configured. Set VITE_TURNSTILE_SITE_KEY to enable registration.",
   "register_keycloak_unavailable": "Keycloak configuration missing. Contact an administrator.",
+  "register_social_divider": "or continue with",
+  "register_social_google": "Sign in with Google",
+  "register_social_github": "Sign in with GitHub",
+  "register_social_microsoft": "Sign in with Microsoft",
+  "register_social_apple": "Sign in with Apple",
+  "register_social_facebook": "Sign in with Facebook",
+  "register_social_instagram": "Sign in with Instagram",
+  "register_social_tiktok": "Sign in with TikTok",
+  "register_social_unavailable": "Configure Keycloak to enable social sign-in.",
   "register_country": "Country",
   "register_country_placeholder": "Select country",
   "register_country_ua": "UA — Ukraine",
