--- a/src/i18n/uk.json
+++ b/src/i18n/uk.json
@@ -73,14 +73,21 @@
   "register_password_rejected": "Keycloak відхилив пароль. Оберіть надійніший.",
   "register_email_exists": "Email вже зареєстрований.",
   "register_nav": "Реєстрація",
-  "register_recaptcha_ready": "reCAPTCHA v3 активна.",
-  "register_recaptcha_loading": "Ініціалізація reCAPTCHA...",
-  "register_recaptcha_failed": "Не вдалося підтвердити reCAPTCHA. Спробуйте знову пізніше.",
-  "register_recaptcha_unavailable": "reCAPTCHA ще завантажується. Оновіть сторінку, якщо проблема не зникла.",
-  "register_recaptcha_disabled": "reCAPTCHA не налаштована. Вкажіть VITE_RECAPTCHA_SITE_KEY, щоб увімкнути реєстрацію.",
-  "register_recaptcha_score": "Оцінка {{value}}",
-  "register_recaptcha_low_score": "Виявлено підозрілу активність. Надсилання заблоковано.",
+  "register_turnstile_ready": "Cloudflare Turnstile активна.",
+  "register_turnstile_loading": "Ініціалізація Turnstile...",
+  "register_turnstile_failed": "Перевірку не пройдено. Спробуйте пізніше.",
+  "register_turnstile_unavailable": "Turnstile ще завантажується. Оновіть сторінку, якщо проблема не зникла.",
+  "register_turnstile_disabled": "Turnstile не налаштована. Вкажіть VITE_TURNSTILE_SITE_KEY, щоб увімкнути реєстрацію.",
   "register_keycloak_unavailable": "Конфігурацію Keycloak не знайдено. Зверніться до адміністратора.",
+  "register_social_divider": "або продовжіть через",
+  "register_social_google": "Увійти через Google",
+  "register_social_github": "Увійти через GitHub",
+  "register_social_microsoft": "Увійти через Microsoft",
+  "register_social_apple": "Увійти через Apple",
+  "register_social_facebook": "Увійти через Facebook",
+  "register_social_instagram": "Увійти через Instagram",
+  "register_social_tiktok": "Увійти через TikTok",
+  "register_social_unavailable": "Налаштуйте Keycloak, щоб увімкнути соціальний вхід.",
   "register_country": "Країна",
   "register_country_placeholder": "Оберіть країну",
   "register_country_ua": "UA — Україна",
