Add user authentication with login and refresh
Implements backend handlers and models for user login and token refresh using Keycloak, including error handling and token management. Adds frontend login page, authentication context, and protected route handling. Updates navigation, i18n, and device management placeholder. Refactors user registration to mark email as verified and removes required actions. Adds API client utility for authenticated requests.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,6 +4,7 @@
   "dashboard": "Dashboard",
   "forecast": "Forecast",
   "compare": "Compare",
+  "devices": "Devices",
   "notifications": "Notifications",
   "reports": "Reports",
   "profile": "Profile",
@@ -14,6 +15,18 @@
   "dark": "Dark",
   "status": "Status",
   "login": "Log in",
+  "login_title": "Sign in to Argus",
+  "login_description": "Enter your credentials to access the Argus Portal.",
+  "login_email_label": "Email",
+  "login_password_label": "Password",
+  "login_submit": "Sign in",
+  "login_processing": "Signing in...",
+  "login_invalid_email": "Enter a valid email address.",
+  "login_invalid_password": "Password must contain at least 8 characters.",
+  "login_invalid_credentials": "Invalid email or password.",
+  "login_generic_error": "Unable to sign in. Try again later.",
+  "login_forgot_password": "Forgot password?",
+  "login_create_account": "Create an account",
   "logout": "Log out",
   "metric": "Metric",
   "metric_aqi": "AQI",
@@ -42,7 +55,8 @@
   "name": "Full name",
   "register_title": "Create an account",
   "register_description": "Strengthen access to Argus Portal with a verified identity. Complete the form to provision a secure account.",
-  "register_full_name": "Full name",
+  "register_first_name": "First name",
+  "register_last_name": "Last name",
   "register_email": "Work email",
   "register_invalid_email": "Enter a valid email address.",
   "register_password": "Password",
@@ -78,6 +92,9 @@
   "register_turnstile_failed": "Verification failed. Try again shortly.",
   "register_turnstile_unavailable": "Turnstile is still loading. Refresh the page if the issue persists.",
   "register_turnstile_disabled": "Turnstile is not configured. Set VITE_TURNSTILE_SITE_KEY to enable registration.",
+  "devices_title": "Managed devices",
+  "devices_description": "Monitor and manage field sensors connected to the Argus Platform.",
+  "devices_placeholder": "Device management is coming soon.",
   "register_keycloak_unavailable": "Keycloak configuration missing. Contact an administrator.",
   "register_social_divider": "or continue with",
   "register_social_google": "Sign in with Google",
@@ -96,7 +113,8 @@
   "register_country_us": "US — United States",
   "register_country_gb": "GB — United Kingdom",
   "register_country_required": "Select your country.",
-  "register_full_name_required": "Enter your full name.",
+  "register_first_name_required": "Enter your first name.",
+  "register_last_name_required": "Enter your last name.",
   "register_time_gate_active": "Please wait before submitting the form.",
   "register_time_gate_pending": "Submit unlocks shortly…",
   "register_throttle_active": "Please wait {{seconds}}s before retrying.",
