--- a/src/i18n/uk.json
+++ b/src/i18n/uk.json
@@ -4,6 +4,7 @@
   "dashboard": "Панель",
   "forecast": "Прогноз",
   "compare": "Порівняння",
+  "devices": "Пристрої",
   "notifications": "Сповіщення",
   "reports": "Звіти",
   "profile": "Профіль",
@@ -14,6 +15,18 @@
   "dark": "Темна",
   "status": "Статус",
   "login": "Увійти",
+  "login_title": "Увійдіть до Argus",
+  "login_description": "Вкажіть корпоративні облікові дані, щоб отримати доступ до Argus Portal.",
+  "login_email_label": "Email",
+  "login_password_label": "Пароль",
+  "login_submit": "Увійти",
+  "login_processing": "Вхід...",
+  "login_invalid_email": "Вкажіть коректну адресу електронної пошти.",
+  "login_invalid_password": "Пароль має містити щонайменше 8 символів.",
+  "login_invalid_credentials": "Невірний email або пароль.",
+  "login_generic_error": "Не вдалося виконати вхід. Спробуйте пізніше.",
+  "login_forgot_password": "Забули пароль?",
+  "login_create_account": "Створити обліковий запис",
   "logout": "Вийти",
   "metric": "Показник",
   "metric_aqi": "AQI",
@@ -42,7 +55,8 @@
   "name": "Повне ім'я",
   "register_title": "Створити обліковий запис",
   "register_description": "Забезпечте безпечний доступ до Argus Portal. Заповніть форму, щоб зареєструвати обліковий запис.",
-  "register_full_name": "ПІБ",
+  "register_first_name": "Ім'я",
+  "register_last_name": "Прізвище",
   "register_email": "Робочий email",
   "register_invalid_email": "Вкажіть коректну адресу електронної пошти.",
   "register_password": "Пароль",
@@ -78,6 +92,9 @@
   "register_turnstile_failed": "Перевірку не пройдено. Спробуйте пізніше.",
   "register_turnstile_unavailable": "Turnstile ще завантажується. Оновіть сторінку, якщо проблема не зникла.",
   "register_turnstile_disabled": "Turnstile не налаштована. Вкажіть VITE_TURNSTILE_SITE_KEY, щоб увімкнути реєстрацію.",
+  "devices_title": "Керовані пристрої",
+  "devices_description": "Моніторинг та керування польовими сенсорами, підключеними до платформи Argus.",
+  "devices_placeholder": "Модуль керування пристроями з'явиться найближчим часом.",
   "register_keycloak_unavailable": "Конфігурацію Keycloak не знайдено. Зверніться до адміністратора.",
   "register_social_divider": "або продовжіть через",
   "register_social_google": "Увійти через Google",
@@ -96,7 +113,8 @@
   "register_country_us": "US — США",
   "register_country_gb": "GB — Велика Британія",
   "register_country_required": "Оберіть країну проживання.",
-  "register_full_name_required": "Вкажіть повне ім'я.",
+  "register_first_name_required": "Вкажіть ім'я.",
+  "register_last_name_required": "Вкажіть прізвище.",
   "register_time_gate_active": "Почекайте перед надсиланням форми.",
   "register_time_gate_pending": "Надсилання стане доступним за мить…",
   "register_throttle_active": "Зачекайте {{seconds}} с перед повторною спробою.",
