Add CAPTCHA verification to login and registration
Introduces Cloudflare Turnstile CAPTCHA validation for login and registration endpoints in the backend and integrates the challenge in the frontend login flow. Refactors backend handlers to use a shared captcha module, updates models to include captcha tokens, and adds cooldown logic for repeated failed login attempts. Also improves CORS configuration, security headers, and updates related configuration and localization files.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -25,6 +25,9 @@
   "login_invalid_password": "Password must contain at least 8 characters.",
   "login_invalid_credentials": "Invalid email or password.",
   "login_generic_error": "Unable to sign in. Try again later.",
+  "login_captcha_failed": "Unable to verify you are human. Try again.",
+  "login_captcha_unavailable": "Security check is still preparing. Please wait.",
+  "login_cooldown": "Too many attempts. Retry in {{seconds}}s.",
   "login_forgot_password": "Forgot password?",
   "login_create_account": "Create an account",
   "logout": "Log out",
