--- a/src/i18n/uk.json
+++ b/src/i18n/uk.json
@@ -25,6 +25,9 @@
   "login_invalid_password": "Пароль має містити щонайменше 8 символів.",
   "login_invalid_credentials": "Невірний email або пароль.",
   "login_generic_error": "Не вдалося виконати вхід. Спробуйте пізніше.",
+  "login_captcha_failed": "Не вдалося пройти перевірку. Спробуйте ще раз.",
+  "login_captcha_unavailable": "Перевірка безпеки ще готується. Зачекайте.",
+  "login_cooldown": "Забагато спроб. Повторіть через {{seconds}} с.",
   "login_forgot_password": "Забули пароль?",
   "login_create_account": "Створити обліковий запис",
   "logout": "Вийти",
