Update identity integration translations
Revised English and Ukrainian translations to reference Argus Identity instead of Keycloak and updated related descriptions for clarity and consistency in profile integration messaging.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -254,15 +254,15 @@
   "reports_water_lviv_title": "Water discoloration upstream of Lviv",
   "reports_water_lviv_description": "Residents noted orange tint after upstream rainfall. Labs requested additional samples.",
   "profile_overview_title": "Account overview",
-  "profile_overview_description": "Keycloak-backed single sign-on profile.",
+  "profile_overview_description": "Single sign-on profile backed by Argus Identity.",
   "profile_status_offline": "Integration offline",
   "profile_status_connected": "Connected",
   "profile_status_disconnected": "Awaiting login",
   "profile_auth_hint": "Sign in to sync preferences and manage secure exports.",
   "profile_preferences": "Preferences",
   "profile_preferences_hint": "Choose appearance and localisation options.",
-  "profile_keycloak_title": "Keycloak integration",
-  "profile_keycloak_description": "Single sign-on with Keycloak protects access to Argus Portal.",
+  "profile_keycloak_title": "Secure identity integration",
+  "profile_keycloak_description": "Centralised single sign-on protects access to Argus Portal.",
   "profile_keycloak_placeholder": "User data unavailable. Set KEYCLOAK_URL and REALM to connect.",
   "save": "Save",
   "cancel": "Cancel",
