--- a/src/i18n/uk.json
+++ b/src/i18n/uk.json
@@ -254,15 +254,15 @@
   "reports_water_lviv_title": "Забарвлення води вище Львова",
   "reports_water_lviv_description": "Після дощу мешканці помітили помаранчевий відтінок. Лабораторії запитали додаткові проби.",
   "profile_overview_title": "Профіль облікового запису",
-  "profile_overview_description": "Профіль єдиної автентифікації Keycloak.",
+  "profile_overview_description": "Профіль єдиної автентифікації Argus Identity.",
   "profile_status_offline": "Інтеграцію вимкнено",
   "profile_status_connected": "Підключено",
   "profile_status_disconnected": "Очікує входу",
   "profile_auth_hint": "Увійдіть, щоб синхронізувати налаштування та керувати експортом.",
   "profile_preferences": "Налаштування",
   "profile_preferences_hint": "Оберіть вигляд та мовні параметри.",
-  "profile_keycloak_title": "Інтеграція з Keycloak",
-  "profile_keycloak_description": "Керування доступом через Keycloak захищає Argus Portal.",
+  "profile_keycloak_title": "Захищена інтеграція",
+  "profile_keycloak_description": "Централізована автентифікація захищає доступ до Argus Portal.",
   "profile_keycloak_placeholder": "Дані користувача недоступні. Вкажіть KEYCLOAK_URL та REALM для підключення.",
   "save": "Зберегти",
   "cancel": "Скасувати",
