Implement backend logout and session timeout handling
Adds backend support for user logout via Keycloak and exposes a /api/auth/logout endpoint. Frontend now handles session inactivity with a warning dialog and automatic logout, synchronizes session state across tabs, and improves token refresh logic. Also refactors route loading to use React.lazy and Suspense, enhances i18n for session timeout, and improves Vite chunk splitting for better code organization.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -27,10 +27,17 @@
   "login_generic_error": "Unable to sign in. Try again later.",
   "login_captcha_failed": "Unable to verify you are human. Try again.",
   "login_captcha_unavailable": "Security check is still preparing. Please wait.",
+  "login_captcha_loading": "Cloudflare Turnstile is initialising…",
+  "login_captcha_ready": "Cloudflare Turnstile protection is active.",
+  "login_captcha_disabled": "Turnstile is not configured. Contact an administrator.",
   "login_cooldown": "Too many attempts. Retry in {{seconds}}s.",
   "login_forgot_password": "Forgot password?",
   "login_create_account": "Create an account",
   "logout": "Log out",
+  "session_timeout_title": "Session will expire soon",
+  "session_timeout_message": "You have been inactive for a while. Choose “Stay logged in” to continue your session.",
+  "session_timeout_extend": "Stay logged in",
+  "session_timeout_logout": "Log out",
   "metric": "Metric",
   "metric_aqi": "AQI",
   "metric_noise": "Noise",
