--- a/src/i18n/uk.json
+++ b/src/i18n/uk.json
@@ -27,10 +27,17 @@
   "login_generic_error": "Не вдалося виконати вхід. Спробуйте пізніше.",
   "login_captcha_failed": "Не вдалося пройти перевірку. Спробуйте ще раз.",
   "login_captcha_unavailable": "Перевірка безпеки ще готується. Зачекайте.",
+  "login_captcha_loading": "Cloudflare Turnstile ініціалізується…",
+  "login_captcha_ready": "Захист Cloudflare Turnstile активний.",
+  "login_captcha_disabled": "Turnstile не налаштовано. Зверніться до адміністратора.",
   "login_cooldown": "Забагато спроб. Повторіть через {{seconds}} с.",
   "login_forgot_password": "Забули пароль?",
   "login_create_account": "Створити обліковий запис",
   "logout": "Вийти",
+  "session_timeout_title": "Сесію буде завершено незабаром",
+  "session_timeout_message": "Ви були неактивні певний час. Натисніть «Залишитися в системі», щоб продовжити роботу.",
+  "session_timeout_extend": "Залишитися в системі",
+  "session_timeout_logout": "Вийти зараз",
   "metric": "Показник",
   "metric_aqi": "AQI",
   "metric_noise": "Шум",
